[package]
name = "shaderc"
version = "0.4.0"
authors = ["Lei Zhang <antiagainst@gmail.com>", "Knapp <knappador@gmail.com>"]

description = "Rust bindings for shaderc"
documentation = "https://docs.rs/shaderc"
repository = "https://github.com/google/shaderc-rs"
readme = "README.md"
license = "Apache-2.0"
keywords = ["shader", "compiler", "spirv", "glsl", "hlsl"]

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
shaderc-sys = "0.4"

[dev-dependencies]
assert_matches = "1.3"
